--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -30,6 +30,8 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "electron-squirrel-startup": "^1.0.1"
+    "dotenv": "^16.4.5",
+    "electron-squirrel-startup": "^1.0.1",
+    "mongodb": "^6.10.0"
   }
 }
